--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "description": "Easy to Maintain Open Source Documentation Websites",
   "version": "1.3.2",
   "license": "MIT",
-  "keywords": ["documentation", "websites", "open source", "docusaurus"],
+  "keywords": [
+    "documentation",
+    "websites",
+    "open source",
+    "docusaurus"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/facebook/Docusaurus.git"
@@ -11,21 +16,14 @@
   "scripts": {
     "ci-check": "yarn lint && yarn prettier:diff",
     "format:source": "prettier --config .prettierrc --write \"lib/**/*.js\"",
-    "format:examples":
-      "prettier --config .prettierrc --write \"examples/**/*.js\"",
-    "format:website":
-      "prettier --config .prettierrc --write \"website/**/*.js\"",
-    "lint":
-      "eslint --cache \"lib/**/*.js\" \"examples/**/*.js\" \"website/**/*.js\"",
-    "nit:source":
-      "prettier --config .prettierrc --list-different \"lib/**/*.js\"",
-    "nit:examples":
-      "prettier --config .prettierrc --list-different \"examples/**/*.js\"",
-    "nit:website":
-      "prettier --config .prettierrc --list-different \"website/**/*.js\"",
+    "format:examples": "prettier --config .prettierrc --write \"examples/**/*.js\"",
+    "format:website": "prettier --config .prettierrc --write \"website/**/*.js\"",
+    "lint": "eslint --cache \"lib/**/*.js\" \"examples/**/*.js\" \"website/**/*.js\"",
+    "nit:source": "prettier --config .prettierrc --list-different \"lib/**/*.js\"",
+    "nit:examples": "prettier --config .prettierrc --list-different \"examples/**/*.js\"",
+    "nit:website": "prettier --config .prettierrc --list-different \"website/**/*.js\"",
     "precommit": "lint-staged",
-    "prettier":
-      "yarn format:source && yarn format:examples && yarn format:website",
+    "prettier": "yarn format:source && yarn format:examples && yarn format:website",
     "prettier:diff": "yarn nit:source && yarn nit:examples && yarn nit:website",
     "test": "jest",
     "start": "cd website && yarn start"
@@ -40,7 +38,10 @@
     }
   },
   "jest": {
-    "testPathIgnorePatterns": ["/node_modules/", "__fixtures__"]
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "__fixtures__"
+    ]
   },
   "bin": {
     "docusaurus-start": "./lib/start-server.js",
